--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -127,7 +127,7 @@
             collections.
           </p>
 
-          <form class="space-y-5 form">
+          <form class="space-y-5">
             <div>
               <label
                 class="text-sm font-medium leading-normal sr-only"
@@ -190,9 +190,10 @@
                 class="form-input-bottom h-12 w-full text-md tracking-wide font-medium leading-2 placeholder:text-gray-400"
               />
             </div>
-            <!-- onclick="register()" -->
+
             <button
-              type="submit"
+              type="button"
+              onclick="register()"
               class="w-full bg-black text-white py-3 rounded-full font-medium hover:bg-gray-800 transition shadow-md cursor-pointer mt-5"
             >
               Sign Up
@@ -232,10 +233,8 @@
       const auth = getAuth(app);
       const db = getFirestore(app);
 
-      const form = document.querySelector("form");
-      form.addEventListener("submit", async (e) => {
-        e.preventDefault(); // prevent form from refreshing page
-
+      // register fn for the submit btn
+      window.register = async () => {
         const username = document.getElementById("fullName").value.trim();
         const email = document.getElementById("email").value.trim();
         const password = document.getElementById("password").value;
@@ -279,9 +278,9 @@
           console.log("User saved in Firestore");
         } catch (err) {
           alert(err.message);
-          console.error(err);
+          console.log(err);
         }
-      });
+      };
     </script>
 
     <!-- <script src="../js/signup.js"></script> -->
