`Update signup.html: add onclick attribute to Sign Up button`

--- a/src/index.html
+++ b/src/index.html
@@ -135,9 +135,8 @@
 
       <!-- Icons -->
       <div id="icons" class="flex items-center gap-5 text-white">
-        <a href="./pages/redirect.html">
+        <a href="./pages/signup.html">
           <!-- white cart icon -->
-
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -172,7 +171,7 @@
           </svg>
         </a>
 
-        <a href="./pages/redirect.html">
+        <a href="./pages/signup.html">
           <!-- white user icon -->
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -307,7 +306,9 @@
                 class="flex justify-between w-full items-center section-btn"
               >
                 <div class="flex items-center gap-0.5">
-                  <a href="#products"class="text-gray-800 tracking-wide">Explore</a>
+                  <a href="#products" class="text-gray-800 tracking-wide"
+                    >Explore</a
+                  >
                 </div>
               </button>
             </div>
@@ -329,7 +330,8 @@
                 class="flex justify-between w-full items-center section-btn"
               >
                 <div class="flex items-center gap-0.5">
-                  <a href="./pages/sellerSignup.html"
+                  <a
+                    href="./pages/sellerSignup.html"
                     class="text-gray-800 tracking-wide"
                     >Become a Partner</a
                   >
@@ -343,7 +345,9 @@
                 class="flex justify-between w-full items-center section-btn"
               >
                 <div class="flex items-center gap-0.5">
-                  <a href="#aboutUs"class="text-gray-800 tracking-wide">About Us</a>
+                  <a href="#aboutUs" class="text-gray-800 tracking-wide"
+                    >About Us</a
+                  >
                 </div>
               </button>
             </div>
@@ -354,7 +358,7 @@
                 class="flex justify-between w-full items-center section-btn"
               >
                 <div class="flex items-center gap-0.5">
-                  <a href="#faq"class="text-gray-800 tracking-wide">FAQs</a>
+                  <a href="#faq" class="text-gray-800 tracking-wide">FAQs</a>
                 </div>
               </button>
             </div>
