--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -160,7 +160,9 @@
             <div class="mt-6 text-center text-sm">
               <p class="text-gray-500">
                 Don't have an account?
-              <a  class="font-semibold text-black hover:underline" href="./signup.html"
+                <a
+                  class="font-semibold text-black hover:underline"
+                  href="./signup.html"
                   >Sign up</a
                 >
               </p>
