--- a/src/pages/sellerSignup.html
+++ b/src/pages/sellerSignup.html
@@ -78,8 +78,8 @@
           <div class="flex items-center gap-4">
             <a
               class="text-sm font-medium leading-normal text-[#1A1A1A] dark:text-white hover:text-gray-500 dark:hover:text-gray-400"
-              href="sellerLogin.html"
-              >Log In</a
+              href="./signup.html"
+              >Create a Buyer Account </a
             >
           </div>
         </header>
