`Update signup.html: add onclick attribute to Sign Up button`

--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -193,7 +193,7 @@
 
             <button
               type="button"
-        
+              onclick="register()"
               class="w-full bg-black text-white py-3 rounded-full font-medium hover:bg-gray-800 transition shadow-md cursor-pointer mt-5"
             >
               Sign Up
