--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -226,15 +226,7 @@
         doc,
       } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-      // This is the correct way to read all six keys
-      export const firebaseConfig = {
-        apiKey: import.meta.env.PUBLIC_FIREBASE_API_KEY,
-        authDomain: import.meta.env.PUBLIC_FIREBASE_AUTH_DOMAIN,
-        projectId: import.meta.env.PUBLIC_FIREBASE_PROJECT_ID,
-        storageBucket: import.meta.env.PUBLIC_FIREBASE_STORAGE_BUCKET,
-        messagingSenderId: import.meta.env.PUBLIC_FIREBASE_MESSAGING_SENDER_ID,
-        appId: import.meta.env.PUBLIC_FIREBASE_APP_ID,
-      };
+      import { firebaseConfig } from "../js/firebase-config.js";
 
       // init
       const app = initializeApp(firebaseConfig);
